@@ -1,3 +1,10 @@
+2005-03-09  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gas/mips/relax-swap1-mips[12].d: Expect the delay slots of
+	bc1f and bc1t to be filled.
+	* gas/mips/branch-misc-3.[sd]: New test.
+	* gas/mips/mips.exp: Run it.
+
 2005-03-08  Jan Beulich  <jbeulich@novell.com>
 
 	* gas/ia64/no-fit.[ls]: New.
